version/0.11/_sources/examples/00-fluent/exhaust_system.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-fluent/exhaust_system.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_00-fluent_exhaust_system.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-fluent_exhaust_system.py:

.. _ref_exhaust_system_tui_api:

Fault-tolerant meshing workflow
-------------------------------
This example sets up and solves a three-dimensional turbulent fluid flow
in a manifold exhaust system, which is common in the automotive industry.
Predicting the flow field in the area of the mixing region is important
to designing the junction properly.

This example uses the guided workflow for fault-tolerant meshing because it
is appropriate for geometries that can have imperfections, such as gaps and
leakages.

**Workflow tasks**

The fault-tolerant meshing workflow guides you through these tasks:

- Import a CAD geometry and manage individual parts
- Generate a surface mesh
- Cap inlets and outlets
- Extract a fluid region
- Define leakages
- Extract edge features
- Set up size controls
- Generate a volume mesh

**Problem description**

In the manifold exhaust system, air flows through the three inlets
with a uniform velocity of 1 m/s. The air then exits through the outlet.
A small pipe is placed in the main portion of the manifold where edge
extraction is considered. The example also includes a known small leakage
to demonstrate the automatic leakage detection aspects of the meshing workflow.

.. GENERATED FROM PYTHON SOURCE LINES 37-46

Example Setup
-------------
Before you can use the fault-tolerant meshing workflow, you must set up the
example and initialize this workflow.

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes downloading and importing
the geometry file.

.. GENERATED FROM PYTHON SOURCE LINES 46-54

.. code-block:: default


    import ansys.fluent.core as pyfluent
    from ansys.fluent.core import examples

    import_filename = examples.download_file(
        "exhaust_system.fmd", "pyfluent/exhaust_system"
    )








.. GENERATED FROM PYTHON SOURCE LINES 55-59

Launch Fluent
~~~~~~~~~~~~~
Launch Fluent as a service in meshing mode with double precision running on
two processors.

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: default


    meshing = pyfluent.launch_fluent(precision="double", processor_count=2, mode="meshing")








.. GENERATED FROM PYTHON SOURCE LINES 63-66

Initialize workflow
~~~~~~~~~~~~~~~~~~~
Initialize the fault-tolerant meshing workflow.

.. GENERATED FROM PYTHON SOURCE LINES 66-69

.. code-block:: default


    meshing.workflow.InitializeWorkflow(WorkflowType="Fault-tolerant Meshing")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 70-79

Fault-folerant meshing workflow
-------------------------------
The fault-tolerant meshing workflow guides you through the many tasks that
follow.

Import CAD and manage parts
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the CAD geometry file (``exhaust_system.fmd``) and selectively manage some
parts.

.. GENERATED FROM PYTHON SOURCE LINES 79-110

.. code-block:: default


    meshing.PartManagement.InputFileChanged(
        FilePath=import_filename, IgnoreSolidNames=False, PartPerBody=False
    )
    meshing.PMFileManagement.FileManager.LoadFiles()
    meshing.PartManagement.Node["Meshing Model"].Copy(
        Paths=[
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/main,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/flow-pipe,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/outpipe3,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/object2,1",
            "/dirty_manifold-for-wrapper," + "1/dirty_manifold-for-wrapper,1/object1,1",
        ]
    )
    meshing.PartManagement.ObjectSetting["DefaultObjectSetting"].OneZonePer.setState("part")
    meshing.workflow.TaskObject["Import CAD and Part Management"].Arguments.setState(
        {
            "Context": 0,
            "CreateObjectPer": "Custom",
            "FMDFileName": import_filename,
            "FileLoaded": "yes",
            "ObjectSetting": "DefaultObjectSetting",
            "Options": {
                "Line": False,
                "Solid": False,
                "Surface": False,
            },
        }
    )
    meshing.workflow.TaskObject["Import CAD and Part Management"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        loading data from '/home/ansys/.    classifying 115 edge occurrences ...
        classified 67 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 2 edge occurrences ...
        classified 1 feature edge edge by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 5 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 13 edge occurrences ...
        classified 8 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 13 edge occurrences ...
        classified 8 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
        classifying 50 edge occurrences ...
        classified 16 feature edge edges by feature angle
        classified 0 single-connected edges as feature edge(s)
        classified 0 multi-connected edges as feature edge(s)
        classified 0 sheet edges as feature edge(s)
        classified 0 wire edges as feature edge(s)
        classified 10 feature edges by group criteria
        processing 8 zones ...
        post-processing 0 zones for feature edge extraction ...
    "Meshing objects are created"

    '*the-non-printing-object*'



.. GENERATED FROM PYTHON SOURCE LINES 111-114

Describe geometry and flow
~~~~~~~~~~~~~~~~~~~~~~~~~~
Describe the geometry and the flow characteristics.

.. GENERATED FROM PYTHON SOURCE LINES 114-141

.. code-block:: default


    meshing.workflow.TaskObject["Describe Geometry and Flow"].Arguments.setState(
        {
            "AddEnclosure": "No",
            "CloseCaps": "Yes",
            "FlowType": "Internal flow through the object",
        }
    )
    meshing.workflow.TaskObject["Describe Geometry and Flow"].UpdateChildTasks(
        SetupTypeChanged=False
    )
    meshing.workflow.TaskObject["Describe Geometry and Flow"].Arguments.setState(
        {
            "AddEnclosure": "No",
            "CloseCaps": "Yes",
            "DescribeGeometryAndFlowOptions": {
                "AdvancedOptions": True,
                "ExtractEdgeFeatures": "Yes",
            },
            "FlowType": "Internal flow through the object",
        }
    )
    meshing.workflow.TaskObject["Describe Geometry and Flow"].UpdateChildTasks(
        SetupTypeChanged=False
    )
    meshing.workflow.TaskObject["Describe Geometry and Flow"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 142-145

Enclose openings
~~~~~~~~~~~~~~~~
Enclose (cap) any openings in the geometry.

.. GENERATED FROM PYTHON SOURCE LINES 147-150

.. image:: /_static/exhaust_system_011.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 152-155

.. image:: /_static/exhaust_system_012.png
  :width: 400pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 155-281

.. code-block:: default


    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "CreatePatchPreferences": {
                "ShowCreatePatchPreferences": False,
            },
            "PatchName": "inlet-1",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet.1"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "CreatePatchPreferences": {
                "ShowCreatePatchPreferences": False,
            },
            "PatchName": "inlet-1",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "351.68205",
                "-361.34322",
                "-301.88668",
                "396.96205",
                "-332.84759",
                "-266.69751",
                "inlet.1",
            ],
            "ZoneSelectionList": ["inlet.1"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].AddChildToTask()

    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].InsertCompoundChildTask()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState({})
    meshing.workflow.TaskObject["inlet-1"].Execute()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "inlet-2",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet.2"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "inlet-2",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "441.68205",
                "-361.34322",
                "-301.88668",
                "486.96205",
                "-332.84759",
                "-266.69751",
                "inlet.2",
            ],
            "ZoneSelectionList": ["inlet.2"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].AddChildToTask()

    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].InsertCompoundChildTask()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState({})
    meshing.workflow.TaskObject["inlet-2"].Execute()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "inlet-3",
            "SelectionType": "zone",
            "ZoneSelectionList": ["inlet"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "inlet-3",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "261.68205",
                "-361.34322",
                "-301.88668",
                "306.96205",
                "-332.84759",
                "-266.69751",
                "inlet",
            ],
            "ZoneSelectionList": ["inlet"],
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].AddChildToTask()

    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].InsertCompoundChildTask()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState({})
    meshing.workflow.TaskObject["inlet-3"].Execute()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "outlet-1",
            "SelectionType": "zone",
            "ZoneSelectionList": ["outlet"],
            "ZoneType": "pressure-outlet",
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState(
        {
            "PatchName": "outlet-1",
            "SelectionType": "zone",
            "ZoneLocation": [
                "1",
                "352.22702",
                "-197.8957",
                "84.102381",
                "394.41707",
                "-155.70565",
                "84.102381",
                "outlet",
            ],
            "ZoneSelectionList": ["outlet"],
            "ZoneType": "pressure-outlet",
        }
    )
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].AddChildToTask()

    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].InsertCompoundChildTask()
    meshing.workflow.TaskObject["Enclose Fluid Regions (Capping)"].Arguments.setState({})
    meshing.workflow.TaskObject["outlet-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-1 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-2 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of inlet-3 complete.
    removed 128 faces.
    64 boundary nodes.
    0 faces removed.

    ---------------- Patching of outlet-1 complete.

    True



.. GENERATED FROM PYTHON SOURCE LINES 282-285

Extract edge features
~~~~~~~~~~~~~~~~~~~~~
Extract edge features.

.. GENERATED FROM PYTHON SOURCE LINES 285-307

.. code-block:: default


    meshing.workflow.TaskObject["Extract Edge Features"].Arguments.setState(
        {
            "ExtractMethodType": "Intersection Loops",
            "ObjectSelectionList": ["flow_pipe", "main"],
        }
    )
    meshing.workflow.TaskObject["Extract Edge Features"].AddChildToTask()

    meshing.workflow.TaskObject["Extract Edge Features"].InsertCompoundChildTask()

    meshing.workflow.TaskObject["edge-group-1"].Arguments.setState(
        {
            "ExtractEdgesName": "edge-group-1",
            "ExtractMethodType": "Intersection Loops",
            "ObjectSelectionList": ["flow_pipe", "main"],
        }
    )
    meshing.workflow.TaskObject["Extract Edge Features"].Arguments.setState({})

    meshing.workflow.TaskObject["edge-group-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_ExtractEdges:
     ExtractEdgesName : edge-group-1
     ExtractMethodType : Intersection Loops
     SelectionType : object
     ObjectSelectionList: (flow_pipe main)
     GeomObjectSelectionList: ()
     ZoneSelectionList: ()
      ZoneLocation:()
     LabelSelectionList : ()
     FeatureAngleLocal : 40
     IndividualCollective : collectively
     SharpAngle : 110

    True



.. GENERATED FROM PYTHON SOURCE LINES 308-311

Identify regions
~~~~~~~~~~~~~~~~
Identify regions.

.. GENERATED FROM PYTHON SOURCE LINES 311-385

.. code-block:: default


    meshing.workflow.TaskObject["Identify Regions"].Arguments.setState(
        {
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneSelectionList": ["main.1"],
        }
    )
    meshing.workflow.TaskObject["Identify Regions"].Arguments.setState(
        {
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneLocation": [
                "1",
                "213.32205",
                "-225.28068",
                "-158.25531",
                "541.32205",
                "-128.32068",
                "84.102381",
                "main.1",
            ],
            "ZoneSelectionList": ["main.1"],
        }
    )
    meshing.workflow.TaskObject["Identify Regions"].AddChildToTask()

    meshing.workflow.TaskObject["Identify Regions"].InsertCompoundChildTask()

    meshing.workflow.TaskObject["fluid-region-1"].Arguments.setState(
        {
            "MaterialPointsName": "fluid-region-1",
            "SelectionType": "zone",
            "X": 377.322045740589,
            "Y": -176.800676988458,
            "Z": -37.0764628583475,
            "ZoneLocation": [
                "1",
                "213.32205",
                "-225.28068",
                "-158.25531",
                "541.32205",
                "-128.32068",
                "84.102381",
                "main.1",
            ],
            "ZoneSelectionList": ["main.1"],
        }
    )
    meshing.workflow.TaskObject["Identify Regions"].Arguments.setState({})

    meshing.workflow.TaskObject["fluid-region-1"].Execute()
    meshing.workflow.TaskObject["Identify Regions"].Arguments.setState(
        {
            "MaterialPointsName": "void-region-1",
            "NewRegionType": "void",
            "ObjectSelectionList": ["inlet-1", "inlet-2", "inlet-3", "main"],
            "X": 374.722045740589,
            "Y": -278.9775145640143,
            "Z": -161.1700719416913,
        }
    )
    meshing.workflow.TaskObject["Identify Regions"].AddChildToTask()

    meshing.workflow.TaskObject["Identify Regions"].InsertCompoundChildTask()

    meshing.workflow.TaskObject["Identify Regions"].Arguments.setState({})

    meshing.workflow.TaskObject["void-region-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_MaterialPoints:
     AddChild: yes
     MaterialPointsName : fluid-region-1
     MptMethodType : Centroid of Objects
     NewRegionType : fluid
     LinkConstruction : no
     SelectionType : zone
     ZoneSelectionList : (main.1)
     ZoneLocation : (1 213.32205 -225.28068 -158.25531 541.32205 -128.32068 84.102381 main.1)
     LabelSelectionList : ()
     ObjectSelectionList : ()
     GraphicalSelection : #t
     ShowCoordinates : #f
     X : 377.32205
     Y : -176.80068
     Z : -37.076463
     OffsetX : 0
     OffsetY : 0
     OffsetZ : 0
     Material point fluid-region-1 is created.
    S_MaterialPoints:
     AddChild: yes
     MaterialPointsName : void-region-1
     MptMethodType : Centroid of Objects
     NewRegionType : void
     LinkConstruction : no
     SelectionType : object
     ZoneSelectionList : ()
     ZoneLocation : ()
     LabelSelectionList : ()
     ObjectSelectionList : (inlet-1 inlet-2 inlet-3 main)
     GraphicalSelection : #t
     ShowCoordinates : #f
     X : 374.72205
     Y : -278.97751
     Z : -161.17007
     OffsetX : 0
     OffsetY : 0
     OffsetZ : 0
     Material point void-region-1 is created.

    True



.. GENERATED FROM PYTHON SOURCE LINES 386-389

Define thresholds for leakages
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Define thresholds for potential leakages.

.. GENERATED FROM PYTHON SOURCE LINES 389-417

.. code-block:: default


    meshing.workflow.TaskObject["Define Leakage Threshold"].Arguments.setState(
        {
            "AddChild": "yes",
            "FlipDirection": True,
            "PlaneDirection": "X",
            "RegionSelectionSingle": "void-region-1",
        }
    )
    meshing.workflow.TaskObject["Define Leakage Threshold"].AddChildToTask()

    meshing.workflow.TaskObject["Define Leakage Threshold"].InsertCompoundChildTask()
    meshing.workflow.TaskObject["leakage-1"].Arguments.setState(
        {
            "AddChild": "yes",
            "FlipDirection": True,
            "LeakageName": "leakage-1",
            "PlaneDirection": "X",
            "RegionSelectionSingle": "void-region-1",
        }
    )
    meshing.workflow.TaskObject["Define Leakage Threshold"].Arguments.setState(
        {
            "AddChild": "yes",
        }
    )
    meshing.workflow.TaskObject["leakage-1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    S_LeakageDetection:
     AddChild: yes
     LeakageName: leakage-1
     SelectionType: identified region
     DeadRegionsList: ()
     RegionSelectionSingle: (void-region-1)
     DeadRegionsSize: 6.4
     PlaneClippingValue: 50
     PlaneDirection: X
     FlipDirection: #t

    True



.. GENERATED FROM PYTHON SOURCE LINES 418-421

Review region settings
~~~~~~~~~~~~~~~~~~~~~~
Review the region settings.

.. GENERATED FROM PYTHON SOURCE LINES 421-459

.. code-block:: default


    meshing.workflow.TaskObject["Update Region Settings"].Arguments.setState(
        {
            "AllRegionFilterCategories": ["2"] * 5 + ["1"] * 2,
            "AllRegionLeakageSizeList": ["none"] * 6 + ["6.4"],
            "AllRegionLinkedConstructionSurfaceList": ["n/a"] * 6 + ["no"],
            "AllRegionMeshMethodList": ["none"] * 6 + ["wrap"],
            "AllRegionNameList": [
                "main",
                "flow_pipe",
                "outpipe3",
                "object2",
                "object1",
                "void-region-1",
                "fluid-region-1",
            ],
            "AllRegionOversetComponenList": ["no"] * 7,
            "AllRegionSourceList": ["object"] * 5 + ["mpt"] * 2,
            "AllRegionTypeList": ["void"] * 6 + ["fluid"],
            "AllRegionVolumeFillList": ["none"] * 6 + ["tet"],
            "FilterCategory": "Identified Regions",
            "OldRegionLeakageSizeList": [""],
            "OldRegionMeshMethodList": ["wrap"],
            "OldRegionNameList": ["fluid-region-1"],
            "OldRegionOversetComponenList": ["no"],
            "OldRegionTypeList": ["fluid"],
            "OldRegionVolumeFillList": ["hexcore"],
            "RegionLeakageSizeList": [""],
            "RegionMeshMethodList": ["wrap"],
            "RegionNameList": ["fluid-region-1"],
            "RegionOversetComponenList": ["no"],
            "RegionTypeList": ["fluid"],
            "RegionVolumeFillList": ["tet"],
        }
    )
    meshing.workflow.TaskObject["Update Region Settings"].Execute()






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ---------------- Regions Updated

    True



.. GENERATED FROM PYTHON SOURCE LINES 460-463

Set mesh control options
~~~~~~~~~~~~~~~~~~~~~~~~
Set mesh control options.

.. GENERATED FROM PYTHON SOURCE LINES 463-466

.. code-block:: default


    meshing.workflow.TaskObject["Choose Mesh Control Options"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (TargeSizeFieldFileName) not found in dict
    (WrapSizeFieldFileName) not found in dict

    True



.. GENERATED FROM PYTHON SOURCE LINES 467-470

Generate surface mesh
~~~~~~~~~~~~~~~~~~~~~
Generate the surface mesh.

.. GENERATED FROM PYTHON SOURCE LINES 472-475

.. image:: /_static/exhaust_system_013.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 475-478

.. code-block:: default


    meshing.workflow.TaskObject["Generate the Surface Mesh"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Writing "//FM_2a1546af0888_283/TaskObject16.msh.h5" ...
    writing 19 node zones
    writing 11 edge zones 
    writing 13 face zones 
    done.Writing "//FM_2a1546af0888_283//ftm-wf-out-exhaust_system.msh.h5" ...
    writing 19 node zones
    writing 11 edge zones 
    writing 13 face zones 
    done.Scoped sizing written to the file "//FM_2a1546af0888_283//ftm-wf-out-exhaust_system-target.szcontrol" successfully
    Scoped sizing written to the file "//FM_2a1546af0888_283//ftm-wf-out-exhaust_system-initial.szcontrol" successfully











    Reading "//FM_2a1546af0888_283/ftm-wf-out-exhaust_system-initial.sf"...

     Read 41911 vertices
        initializing octree...
        refining octree...
        projecting...
     Wrap-v2 projection mode set to 1
     Projection completed in 0.180000 s, 177355.555556 nodes/sec




        initializing octree...
        refining octree...





    Reading "//FM_2a1546af0888_283/ftm-wf-out-exhaust_system-target.sf"...

     Read 41961 vertices
    Found 0 nodes with invalid normals
    Found 0 nodes with invalid normals
    Found 0 faces with invalid dihedral angle





    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0028760672 minutes (4.7934718e-05 hours)




    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0012783488 minutes (2.1306078e-05 hours)




    Gentle Improve for wrapper-surf-fluid-region-1 in 0.0013122837 minutes (2.1871659e-05 hours)











    Reading "//FM_2a1546af0888_283/ftm-wf-out-exhaust_system.msh.h5" ...
    3D mesh
    nodes: 23322
    edges: 4754
    faces: 33780 
    cells: 0 
    reading 19 node zones
    reading 11 edge zones
    reading 13 face zones
    appending mesh...
    done.
    generating pointers...done.
    extracting boundary entities...
     37601 boundary nodes.
     62332 boundary faces.
     14 boundary face zones.
    done.

    Surface Mesh:
    ==============================================================================
    Computed SF in -----------------------------------0.043477865 minutes (0.00072463108 hours).
    Merge zones in -----------------------------------0 minutes (0 hours).
    Automatic closing of holes (inner wrap) in -----0.042130264 minutes (0.00070217106 hours).
    Wrapped all material point regions in ------------0.13344957 minutes (0.0022241594 hours).
    Surface mesh all fluid objects in ----------------0 minutes (0 hours).
    Surface Improved in ------------------------------0.041274317 minutes (0.00068790529 hours).
    Surface Improved (resolve_int) in ----------------0.0066129009 minutes (0.00011021501 hours).
    Connected all fluid mesh objects in --------------5.7339668e-06 minutes (9.5566114e-08 hours).
    Compute Volume-Fill Regions in -------------------4.4902166e-07 minutes (7.4836943e-09 hours).
    Solid surface mesh generated and Improved in -----0 minutes (0 hours).
    ==============================================================================
    Total (surface mesh)                              0.26695118 minutes (0.0044491863 hours)


    ------------------------- --------------------- -------------------- ---------------- ----------
                         name skewed-cells (> 0.80)    averaged-skewness maximum-skewness face count
    ------------------------- --------------------- -------------------- ---------------- ----------
               fluid-region-1                     0           0.03462012       0.77686739      28552

    ------------------------- --------------------- -------------------- ---------------- ----------
                         name skewed-cells (> 0.80)    averaged-skewness maximum-skewness face count
    ------------------------- --------------------- -------------------- ---------------- ----------
              Overall Summary                     0           0.03462012       0.77686739      28552

    True



.. GENERATED FROM PYTHON SOURCE LINES 479-482

Confirm and update boundaries
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Confirm and update the boundaries.

.. GENERATED FROM PYTHON SOURCE LINES 482-485

.. code-block:: default


    meshing.workflow.TaskObject["Update Boundaries"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ---------------- Boundary Conditions Updated

    True



.. GENERATED FROM PYTHON SOURCE LINES 486-489

Add boundary layers
~~~~~~~~~~~~~~~~~~~
Add boundary layers.

.. GENERATED FROM PYTHON SOURCE LINES 489-503

.. code-block:: default


    meshing.workflow.TaskObject["Add Boundary Layers"].AddChildToTask()

    meshing.workflow.TaskObject["Add Boundary Layers"].InsertCompoundChildTask()

    meshing.workflow.TaskObject["aspect-ratio_1"].Arguments.setState(
        {
            "BLControlName": "aspect-ratio_1",
        }
    )
    meshing.workflow.TaskObject["Add Boundary Layers"].Arguments.setState({})

    meshing.workflow.TaskObject["aspect-ratio_1"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 504-507

Generate volume mesh
~~~~~~~~~~~~~~~~~~~~
Generate the volume mesh.

.. GENERATED FROM PYTHON SOURCE LINES 509-512

.. image:: /_static/exhaust_system_014.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 512-531

.. code-block:: default


    meshing.workflow.TaskObject["Generate the Volume Mesh"].Arguments.setState(
        {
            "AllRegionNameList": [
                "main",
                "flow_pipe",
                "outpipe3",
                "object2",
                "object1",
                "void-region-1",
                "fluid-region-1",
            ],
            "AllRegionSizeList": ["11.33375"] * 7,
            "AllRegionVolumeFillList": ["none"] * 6 + ["tet"],
            "EnableParallel": True,
        }
    )
    meshing.workflow.TaskObject["Generate the Volume Mesh"].Execute()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Writing "//FM_2a1546af0888_283/TaskObject23.msh.h5" ...
    writing 21 node zones
    writing 11 edge zones 
    writing 22 face zones 
    done.




    Warning: growing more than 1 layer of prisms may take a long time.

        warning: material point fluid-region-1 ignored because face zone label with same name exists.
    done

    creating backup for object "fluid-region-1"...done.
    Warning: Recomputed Max Cell Volume to 276.57171.
    Generating initial mesh...
    .

        the existing Size Field will be used.

    Refining mesh...
    .

    .

    .



    No cells below quality 0.0001.

    Release:        (22 2 0  2022) 
    Build Time:     May 16 2022 10:55:08 EDT 
    Build ID:       10211

    Mesh Info for exhaust_system:


    Total cell count: 260533


    Wall-Clock Usage (Estimate) for exhaust_system:
    Surface Mesh:
    ==============================================================================
    Computed SF in -----------------------------------0.043477865 minutes (0.00072463108 hours).
    Merge zones in -----------------------------------0 minutes (0 hours).
    Automatic closing of holes (inner wrap) in -----0.042130264 minutes (0.00070217106 hours).
    Wrapped all material point regions in ------------0.13344957 minutes (0.0022241594 hours).
    Surface mesh all fluid objects in ----------------0 minutes (0 hours).
    Surface Improved in ------------------------------0.041274317 minutes (0.00068790529 hours).
    Surface Improved (resolve_int) in ----------------0.0066129009 minutes (0.00011021501 hours).
    Connected all fluid mesh objects in --------------5.7339668e-06 minutes (9.5566114e-08 hours).
    Compute Volume-Fill Regions in -------------------4.4902166e-07 minutes (7.4836943e-09 hours).
    Solid surface mesh generated and Improved in -----0 minutes (0 hours).
    ==============================================================================
    Total (surface mesh)                              0.26695118 minutes (0.0044491863 hours)

    Volume Mesh:
    ==============================================================================
    Continuous Prisms generated and Improved in ------0.061594951 minutes (0.0010265825 hours).
    Volume-fill in -----------------------------------0.054670465 minutes (0.00091117442 hours).
    Solid volume mesh generated and Improved in ------0.00045911868 minutes (7.6519781e-06 hours).
    Rezoned and final volume mesh improve in ---------0.016058985 minutes (0.00026764976 hours).
    ==============================================================================
    Total (volume mesh)                               0.13278352 minutes (0.0022130587 hours)
    ==============================================================================
    Total                                             0.3997347 minutes (0.006662245 hours)
    ==============================================================================



    Memory Usage for exhaust_system:

    ------------------------------------------------------------------------------
           | Virtual Mem Usage (GB)   | Resident Mem Usage(GB)   |              
    ID     | Current      Peak        | Current      Peak        | Page Faults  
    ------------------------------------------------------------------------------
    host   | 0.900238     0.901981    | 0.509872     0.511265    | 0          
    n0     | 3.89833      4.22834     | 0.37487      1.05219     | 489        
    n1     | 3.3725       3.3725      | 0.189999     0.189999    | 135        
    ------------------------------------------------------------------------------
    Total  | 8.17106      8.50282     | 1.07474      1.75345     | 624        
    ------------------------------------------------------------------------------

    ------------------------------------------------------------------------------------------------
                        | Virtual Mem Usage (GB)    | Resident Mem Usage(GB)    | System Mem (GB)          
    Hostname            | Current      Peak         | Current      Peak         |                          
    ------------------------------------------------------------------------------------------------
    2a1546af0888        | 8.17106      8.50282      | 1.07474      1.75345      | 31.3534      
    ------------------------------------------------------------------------------------------------
    Total               | 8.17106      8.50282      | 1.07474      1.75345      |           
    ------------------------------------------------------------------------------------------------




    Quality Report for exhaust_system:
    Report of Cell Orthogonal Quality:

                  Region Name   Quality<0.100   Quality<0.040   Min Quality Cell Count
    -------------------------  --------------  -------------- ------------- ----------
               fluid-region-1               0               0         0.104     260533

                  Region Name   Quality<0.100   Quality<0.040   Min Quality Cell Count
    -------------------------  --------------  -------------- ------------- ----------
              Overall Summary               0               0         0.104     260533





    True



.. GENERATED FROM PYTHON SOURCE LINES 532-535

Check mesh
~~~~~~~~~~
Check the mesh.

.. GENERATED FROM PYTHON SOURCE LINES 535-538

.. code-block:: default


    meshing.tui.mesh.check_mesh()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Domain extents.
      x-coordinate: min = 2.133220e+02, max = 5.413220e+02.
      y-coordinate: min = -3.613432e+02, max = -1.283207e+02.
      z-coordinate: min = -3.692476e+02, max = 8.410238e+01.
    Volume statistics.
      minimum volume: 2.567911e-01.
      maximum volume: 3.305462e+02.
        total volume: 5.483305e+06.
    Face area statistics.
       minimum face area: 4.247814e-03.
       maximum face area: 1.743890e+04.
       average face area: 1.203766e+01.
    Checking number of nodes per edge.
    Checking number of nodes per face.
    Checking number of nodes per cell.
    Checking number of faces/neighbors per cell.
    Checking cell faces/neighbors.
    Checking isolated cells.
    Checking face handedness.
    Checking periodic face pairs.
    Checking face children.
    Checking face zone boundary conditions.
    Checking for invalid node coordinates.
    Checking poly cells.
    Checking zones.
    Checking neighborhood.
    Checking interfaces.
    Checking modified centroid.
    Checking non-positive or too small area.




.. GENERATED FROM PYTHON SOURCE LINES 539-547

Solve and postprocess
---------------------
Once you have completed the fault tolerate meshing workflow, you can solve and
postprcess the results.

Switch to solution mode
~~~~~~~~~~~~~~~~~~~~~~~
Switch to the solution mode.

.. GENERATED FROM PYTHON SOURCE LINES 547-552

.. code-block:: default


    solver = meshing.switch_to_solver()

    solver.tui.mesh.check()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Done.
    *********************************************
    Info: Your license enables 4-way parallel execution.
    For faster simulations, please start the application with the appropriate parallel options.
    *********************************************


    *********************************************
    Info: Your license enables 4-way parallel execution.
    For faster simulations, please start the application with the appropriate parallel options.
    *********************************************


    Preparing...


    deleting exterior entities...done.
    unused zone boundary-node-216 removed
    unused zone boundary-node-218 removed

    *********************************************
    Info: Your license enables 4-way parallel execution.
    For faster simulations, please start the application with the appropriate parallel options.
    *********************************************


    *********************************************
    Info: Your license enables 4-way parallel execution.
    For faster simulations, please start the application with the appropriate parallel options.
    *********************************************


    Transferring mesh
            creating threads... done
            transferring nodes... done
            transferring cells... done
            transferring faces... done
            post mesh transfer operations... done
    done

    Building...
         mesh
            auto partitioning mesh by Metis (fast),
            distributing mesh
                    parts..,
                    faces..,
                    nodes..,
                    cells..,
            bandwidth reduction using Reverse Cuthill-McKee: 102410/1695 = 60.4189
         materials,
         interface,
         domains,
         zones,
            outlet-1
            inlet-3
            inlet-2
            inlet-1
            interior--fluid-region-1
            main.1
            flow-pipe
            outpipe3.1
            object2.1
            object1.1
            fluid-region-1
         surfaces,
         parallel,
    Done.
    Mesh is now scaled to meters.

     Domain Extents:
       x-coordinate: min (m) = 2.154117e-01, max (m) = 5.391505e-01
       y-coordinate: min (m) = -3.600567e-01, max (m) = -1.293207e-01
       z-coordinate: min (m) = -3.626752e-01, max (m) = 8.410238e-02
     Volume statistics:
       minimum volume (m3): 2.567911e-10
       maximum volume (m3): 3.305462e-07
         total volume (m3): 5.483305e-03
     Face area statistics:
       minimum face area (m2): 4.662098e-07
       maximum face area (m2): 1.036981e-04
     Checking mesh.....................................
    Done.




.. GENERATED FROM PYTHON SOURCE LINES 553-556

Set units for length
~~~~~~~~~~~~~~~~~~~~
Set the units for length.

.. GENERATED FROM PYTHON SOURCE LINES 556-559

.. code-block:: default


    solver.tui.define.units("length", "mm")








.. GENERATED FROM PYTHON SOURCE LINES 560-563

Select turbulence model
~~~~~~~~~~~~~~~~~~~~~~~
Select the kw sst turbulence model.

.. GENERATED FROM PYTHON SOURCE LINES 563-566

.. code-block:: default


    solver.tui.define.models.viscous.kw_sst("yes")








.. GENERATED FROM PYTHON SOURCE LINES 567-571

Set velocity and turbulence boundary conditions for first inlet
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the velocity and turbulence boundary conditions for the first inlet
(``inlet-1``).

.. GENERATED FROM PYTHON SOURCE LINES 571-576

.. code-block:: default


    solver.tui.define.boundary_conditions.set.velocity_inlet(
        "inlet-1", [], "vmag", "no", 1, "quit"
    )








.. GENERATED FROM PYTHON SOURCE LINES 577-581

Set same boundary conditions for other velocity inlets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the same boundary conditions for the other velocity inlets (``inlet_2``
and ``inlet_3``).

.. GENERATED FROM PYTHON SOURCE LINES 581-584

.. code-block:: default


    solver.tui.define.boundary_conditions.copy_bc("inlet-1", "inlet-2", "inlet-3", ())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     Copy inlet-1 boundary conditions to inlet-3
    Copy inlet-1 boundary conditions to inlet-2




.. GENERATED FROM PYTHON SOURCE LINES 585-588

Set boundary conditions at outlet
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Set the boundary conditions at the outlet (``outlet-1``).

.. GENERATED FROM PYTHON SOURCE LINES 588-594

.. code-block:: default


    solver.tui.define.boundary_conditions.set.pressure_outlet(
        "outlet-1", [], "turb-intensity", 5, "quit"
    )
    solver.tui.solve.monitors.residual.plot("yes")








.. GENERATED FROM PYTHON SOURCE LINES 595-598

Initialize flow field
~~~~~~~~~~~~~~~~~~~~~
Initialize the flow field using hybrid initialization.

.. GENERATED FROM PYTHON SOURCE LINES 598-601

.. code-block:: default


    solver.tui.solve.initialize.hyb_initialization()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Initialize using the hybrid initialization method.

    Checking case topology... 
    -This case has both inlets & outlets 
    -Pressure information is not available at the boundaries.
     Case will be initialized with constant pressure

            iter            scalar-0

            1               1.000000e+00
            2               1.892882e-04
            3               2.994196e-05
            4               7.855571e-06
            5               5.849881e-06
            6               2.578861e-06
            7               6.297252e-06
            8               1.412174e-06
            9               2.320356e-06
            10              6.112849e-07

    Hybrid initialization is done.




.. GENERATED FROM PYTHON SOURCE LINES 602-605

Start calculation
~~~~~~~~~~~~~~~~~
Start the calculation by requesting 100 iterations.

.. GENERATED FROM PYTHON SOURCE LINES 607-610

.. image:: /_static/exhaust_system_015.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 610-616

.. code-block:: default


    solver.tui.solve.set.number_of_iterations(100)
    solver.tui.solve.iterate()

    # solver.tui.report.volume_integrals.volume("fluid-region-1","()","yes","volume.vrp")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
         1  1.0000e+00  6.5068e-03  6.7597e-03  7.3767e-03  6.2224e-01  2.7159e+00  0:03:18   99
         2  4.5486e-01  3.8804e-03  4.2427e-03  5.3040e-03  1.6563e-01  1.5921e-01  0:03:25   98
         3  3.5498e-01  2.0890e-03  2.4344e-03  3.7941e-03  1.1283e-01  1.0585e-01  0:03:29   97
         4  3.3845e-01  1.3504e-03  1.6800e-03  2.7878e-03  7.8440e-02  6.0840e-02  0:03:27   96
         5  3.1730e-01  9.4739e-04  1.2703e-03  2.4407e-03  5.8277e-02  3.3488e-02  0:03:24   95
         6  3.0081e-01  7.3345e-04  1.0398e-03  2.1476e-03  4.6960e-02  2.3629e-02  0:03:21   94
         7  2.8905e-01  6.1089e-04  8.9264e-04  2.0195e-03  3.9850e-02  1.8157e-02  0:03:19   93
         8  2.8022e-01  5.3452e-04  7.9714e-04  1.8873e-03  3.4381e-02  1.4434e-02  0:03:12   92
         9  2.7178e-01  4.8498e-04  7.2353e-04  1.7881e-03  2.9426e-02  1.1726e-02  0:03:06   91
        10  2.6184e-01  4.4510e-04  6.6952e-04  1.6765e-03  2.5615e-02  9.8688e-03  0:03:01   90
        11  2.5018e-01  4.1956e-04  6.2827e-04  1.6096e-03  2.2006e-02  8.2531e-03  0:02:56   89

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        12  2.3856e-01  4.0700e-04  5.9855e-04  1.5454e-03  2.0056e-02  7.1561e-03  0:02:52   88
        13  2.2712e-01  3.7681e-04  5.5504e-04  1.4524e-03  1.7659e-02  6.4050e-03  0:02:48   87
        14  2.1787e-01  3.6691e-04  5.3098e-04  1.3819e-03  1.5899e-02  6.0361e-03  0:02:51   86
        15  2.0955e-01  3.5114e-04  5.0119e-04  1.2823e-03  1.4095e-02  5.5489e-03  0:02:47   85
        16  2.0347e-01  3.5706e-04  4.9008e-04  1.2223e-03  1.2826e-02  5.2584e-03  0:02:43   84
        17  1.9762e-01  3.5601e-04  4.7374e-04  1.1312e-03  1.1652e-02  4.8375e-03  0:02:40   83
        18  1.9228e-01  3.7102e-04  4.7387e-04  1.0861e-03  1.0808e-02  4.5563e-03  0:02:36   82
        19  1.8632e-01  3.7725e-04  4.6833e-04  1.0068e-03  1.0123e-02  4.2402e-03  0:02:33   81
        20  1.8170e-01  3.9750e-04  4.7850e-04  9.7780e-04  9.4611e-03  4.0838e-03  0:02:31   80
        21  1.7588e-01  3.9927e-04  4.7473e-04  8.9826e-04  8.7497e-03  3.9598e-03  0:02:29   79
        22  1.7040e-01  4.1160e-04  4.8064e-04  8.6386e-04  8.3512e-03  3.8720e-03  0:02:26   78

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        23  1.6467e-01  4.1818e-04  4.8248e-04  8.1043e-04  7.9148e-03  3.7827e-03  0:02:24   77
        24  1.5932e-01  4.2516e-04  4.8440e-04  7.7419e-04  7.6300e-03  3.7043e-03  0:02:22   76
        25  1.5349e-01  4.2783e-04  4.8342e-04  7.3654e-04  7.3090e-03  3.5669e-03  0:02:20   75
        26  1.4757e-01  4.2826e-04  4.7825e-04  7.0547e-04  7.1055e-03  3.4844e-03  0:02:18   74
        27  1.4222e-01  4.2711e-04  4.7040e-04  6.7993e-04  6.7947e-03  3.2309e-03  0:02:16   73
        28  1.3665e-01  4.1719e-04  4.5460e-04  6.4244e-04  6.4595e-03  3.0867e-03  0:02:14   72
        29  1.3157e-01  4.0665e-04  4.3836e-04  6.1239e-04  6.1668e-03  2.9013e-03  0:02:12   71
        30  1.2620e-01  3.9250e-04  4.1861e-04  5.8230e-04  5.7816e-03  2.7418e-03  0:02:10   70
        31  1.2123e-01  3.7680e-04  3.9735e-04  5.5438e-04  5.4399e-03  2.5502e-03  0:02:08   69
        32  1.1679e-01  3.5821e-04  3.7505e-04  5.2705e-04  5.0673e-03  2.3851e-03  0:02:06   68
        33  1.1266e-01  3.3944e-04  3.5383e-04  5.0103e-04  4.7318e-03  2.2219e-03  0:02:04   67

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        34  1.0870e-01  3.2060e-04  3.3327e-04  4.7657e-04  4.3863e-03  2.0792e-03  0:02:02   66
        35  1.0513e-01  3.0259e-04  3.1470e-04  4.5421e-04  4.0672e-03  1.9438e-03  0:02:01   65
        36  1.0182e-01  2.8468e-04  2.9762e-04  4.3267e-04  3.7427e-03  1.8373e-03  0:01:59   64
        37  9.9236e-02  2.6883e-04  2.8388e-04  4.1477e-04  3.4835e-03  1.7445e-03  0:01:57   63
        38  9.6858e-02  2.5435e-04  2.7222e-04  3.9841e-04  3.2483e-03  1.6726e-03  0:01:55   62
        39  9.5124e-02  2.4229e-04  2.6268e-04  3.8542e-04  3.0514e-03  1.6039e-03  0:01:53   61
        40  9.3375e-02  2.3049e-04  2.5296e-04  3.7061e-04  2.8506e-03  1.5581e-03  0:01:51   60
        41  9.2133e-02  2.2171e-04  2.4598e-04  3.5942e-04  2.7052e-03  1.5211e-03  0:01:49   59
        42  9.0768e-02  2.1302e-04  2.3856e-04  3.4624e-04  2.5669e-03  1.4862e-03  0:01:47   58
        43  8.9806e-02  2.0738e-04  2.3272e-04  3.3592e-04  2.4694e-03  1.4751e-03  0:01:46   57
        44  8.9091e-02  2.0170e-04  2.2744e-04  3.2565e-04  2.3628e-03  1.4314e-03  0:01:44   56

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        45  8.8216e-02  1.9737e-04  2.2276e-04  3.1576e-04  2.2738e-03  1.3977e-03  0:01:42   55
        46  8.7287e-02  1.9314e-04  2.1808e-04  3.0739e-04  2.2063e-03  1.3632e-03  0:01:40   54
        47  8.6363e-02  1.9079e-04  2.1408e-04  2.9985e-04  2.1527e-03  1.3458e-03  0:01:38   53
        48  8.5284e-02  1.8881e-04  2.1061e-04  2.9404e-04  2.1016e-03  1.3191e-03  0:01:37   52
        49  8.4296e-02  1.8828e-04  2.0804e-04  2.8814e-04  2.0792e-03  1.3079e-03  0:01:35   51
        50  8.3144e-02  1.8728e-04  2.0594e-04  2.8372e-04  2.0389e-03  1.2870e-03  0:01:33   50
        51  8.2215e-02  1.8723e-04  2.0451e-04  2.7992e-04  2.0295e-03  1.2827e-03  0:01:31   49
        52  8.1154e-02  1.8609e-04  2.0275e-04  2.7706e-04  2.0014e-03  1.2663e-03  0:01:29   48
        53  8.0302e-02  1.8603e-04  2.0135e-04  2.7519e-04  1.9881e-03  1.2678e-03  0:01:27   47
        54  7.9364e-02  1.8510e-04  1.9963e-04  2.7363e-04  1.9575e-03  1.2573e-03  0:01:25   46
        55  7.8512e-02  1.8473e-04  1.9850e-04  2.7339e-04  1.9494e-03  1.2605e-03  0:01:23   45

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        56  7.7392e-02  1.8342e-04  1.9713e-04  2.7317e-04  1.9402e-03  1.2581e-03  0:01:22   44
        57  7.6376e-02  1.8262e-04  1.9612e-04  2.7461e-04  1.9612e-03  1.2659e-03  0:01:20   43
        58  7.5361e-02  1.8091e-04  1.9477e-04  2.7510e-04  1.9740e-03  1.2678e-03  0:01:18   42
        59  7.4302e-02  1.8028e-04  1.9377e-04  2.7605e-04  2.0097e-03  1.2719e-03  0:01:16   41
        60  7.3124e-02  1.7902e-04  1.9251e-04  2.7553e-04  2.0404e-03  1.2736e-03  0:01:14   40
        61  7.1965e-02  1.7828e-04  1.9193e-04  2.7589e-04  2.0742e-03  1.2740e-03  0:01:12   39
        62  7.0783e-02  1.7687e-04  1.9052e-04  2.7510e-04  2.0872e-03  1.2737e-03  0:01:10   38
        63  6.9850e-02  1.7548e-04  1.8951e-04  2.7413e-04  2.1062e-03  1.2662e-03  0:01:09   37
        64  6.8877e-02  1.7369e-04  1.8763e-04  2.7181e-04  2.0928e-03  1.2548e-03  0:01:07   36
        65  6.8098e-02  1.7146e-04  1.8600e-04  2.6904e-04  2.0777e-03  1.2351e-03  0:01:05   35
        66  6.7084e-02  1.6890e-04  1.8336e-04  2.6462e-04  2.0267e-03  1.2081e-03  0:01:03   34

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        67  6.6014e-02  1.6630e-04  1.8124e-04  2.5956e-04  1.9787e-03  1.1704e-03  0:01:01   33
        68  6.4764e-02  1.6295e-04  1.7827e-04  2.5285e-04  1.8971e-03  1.1311e-03  0:00:59   32
        69  6.3648e-02  1.5950e-04  1.7505e-04  2.4609e-04  1.8241e-03  1.0878e-03  0:00:57   31
        70  6.2367e-02  1.5620e-04  1.7137e-04  2.3850e-04  1.7283e-03  1.0516e-03  0:00:56   30
        71  6.1264e-02  1.5255e-04  1.6792e-04  2.3081e-04  1.6555e-03  1.0137e-03  0:00:54   29
        72  6.0181e-02  1.4899e-04  1.6406e-04  2.2367e-04  1.5765e-03  9.8905e-04  0:00:52   28
        73  5.9232e-02  1.4538e-04  1.6081e-04  2.1701e-04  1.5267e-03  9.6269e-04  0:00:50   27
        74  5.8330e-02  1.4259e-04  1.5816e-04  2.1151e-04  1.4780e-03  9.5301e-04  0:00:48   26
        75  5.7778e-02  1.4024e-04  1.5602e-04  2.0712e-04  1.4664e-03  9.4213e-04  0:00:46   25
        76  5.7264e-02  1.3877e-04  1.5420e-04  2.0418e-04  1.4584e-03  9.4327e-04  0:00:45   24
        77  5.6948e-02  1.3784e-04  1.5277e-04  2.0211e-04  1.4786e-03  9.4504e-04  0:00:43   23

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        78  5.6573e-02  1.3747e-04  1.5221e-04  2.0129e-04  1.4977e-03  9.5242e-04  0:00:41   22
        79  5.6312e-02  1.3714e-04  1.5222e-04  2.0164e-04  1.5275e-03  9.5791e-04  0:00:39   21
        80  5.6073e-02  1.3681e-04  1.5269e-04  2.0238e-04  1.5521e-03  9.6866e-04  0:00:37   20
        81  5.6167e-02  1.3640e-04  1.5427e-04  2.0412e-04  1.5756e-03  9.7512e-04  0:00:35   19
        82  5.6369e-02  1.3610e-04  1.5673e-04  2.0652e-04  1.5891e-03  9.8356e-04  0:00:33   18
        83  5.6723e-02  1.3515e-04  1.5925e-04  2.0939e-04  1.5898e-03  9.8684e-04  0:00:32   17
        84  5.7086e-02  1.3450e-04  1.6100e-04  2.1170e-04  1.5795e-03  9.9349e-04  0:00:30   16
        85  5.7475e-02  1.3297e-04  1.6213e-04  2.1328e-04  1.5629e-03  9.8756e-04  0:00:28   15
        86  5.7682e-02  1.3115e-04  1.6166e-04  2.1298e-04  1.5318e-03  9.8194e-04  0:00:26   14
        87  5.7629e-02  1.2858e-04  1.5924e-04  2.1114e-04  1.4825e-03  9.6017e-04  0:00:24   13
        88  5.7271e-02  1.2611e-04  1.5588e-04  2.0804e-04  1.4297e-03  9.4309e-04  0:00:22   12

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
        89  5.6937e-02  1.2324e-04  1.5242e-04  2.0373e-04  1.3675e-03  9.1047e-04  0:00:20   11
        90  5.6108e-02  1.2044e-04  1.4810e-04  1.9882e-04  1.3120e-03  8.8662e-04  0:00:19   10
        91  5.5238e-02  1.1704e-04  1.4348e-04  1.9300e-04  1.2489e-03  8.5109e-04  0:00:17    9
        92  5.4095e-02  1.1420e-04  1.3855e-04  1.8713e-04  1.1983e-03  8.2705e-04  0:00:15    8
        93  5.2869e-02  1.1118e-04  1.3396e-04  1.8064e-04  1.1479e-03  7.9232e-04  0:00:13    7
        94  5.1538e-02  1.0902e-04  1.3005e-04  1.7478e-04  1.1200e-03  7.7642e-04  0:00:11    6
        95  5.0516e-02  1.0667e-04  1.2708e-04  1.6957e-04  1.0909e-03  7.5149e-04  0:00:09    5
        96  4.9568e-02  1.0529e-04  1.2461e-04  1.6597e-04  1.0793e-03  7.5528e-04  0:00:07    4
        97  4.9066e-02  1.0382e-04  1.2283e-04  1.6304e-04  1.0764e-03  7.4755e-04  0:00:06    3
        98  4.8516e-02  1.0300e-04  1.2086e-04  1.6103e-04  1.0882e-03  7.6288e-04  0:00:04    2
        99  4.8315e-02  1.0187e-04  1.2051e-04  1.5983e-04  1.0985e-03  7.6487e-04  0:00:02    1

      iter  continuity  x-velocity  y-velocity  z-velocity           k       omega     time/iter
       100  4.7901e-02  1.0071e-04  1.1810e-04  1.5848e-04  1.1080e-03  7.7825e-04  0:00:00    0




.. GENERATED FROM PYTHON SOURCE LINES 617-620

Create path lines
~~~~~~~~~~~~~~~~~
Create path lines highlighting the flow field.

.. GENERATED FROM PYTHON SOURCE LINES 622-625

.. image:: /_static/exhaust_system_016.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 625-644

.. code-block:: default


    solver.tui.display.objects.create(
        "pathlines",
        "pathlines-1",
        "field",
        "time",
        "accuracy-control",
        "tolerance",
        "0.001",
        "skip",
        "5",
        "surfaces-list",
        "inlet-1",
        "inlet-2",
        "inlet-3",
        "()",
        "quit",
    )








.. GENERATED FROM PYTHON SOURCE LINES 645-648

Create iso-surface
~~~~~~~~~~~~~~~~~~
Create an iso-surface through the manifold geometry.

.. GENERATED FROM PYTHON SOURCE LINES 648-659

.. code-block:: default


    solver.tui.surface.iso_surface(
        "x-coordinate",
        "surf-x-coordinate",
        "()",
        "fluid-region-1",
        "()",
        "380",
        "()",
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    range [215.41171, 539.15054]




.. GENERATED FROM PYTHON SOURCE LINES 660-664

Create contours of velocity magnitude
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create contours of the velocity magnitude throughout the manifold
along with the mesh.

.. GENERATED FROM PYTHON SOURCE LINES 666-669

.. image:: /_static/exhaust_system_017.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 669-690

.. code-block:: default


    solver.tui.display.objects.create(
        "contour",
        "contour-velocity",
        "field",
        "velocity-magnitude",
        "surfaces-list",
        "surf-x-coordinate",
        "()",
        "node-values?",
        "no",
        "range-option",
        "auto-range-on",
        "global-range?",
        "no",
        "quit",
        "quit",
    )

    solver.tui.display.objects.create("mesh", "mesh-1", "surfaces-list", "*", "()", "quit")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    WARNING: "Smooth" contours can't be displayed when node-values is set to off. Changing the Coloring type to "Banded".




.. GENERATED FROM PYTHON SOURCE LINES 691-694

Create scene
~~~~~~~~~~~~
Create a scene containing the mesh and the contours.

.. GENERATED FROM PYTHON SOURCE LINES 696-699

.. image:: /_static/exhaust_system_018.png
  :width: 500pt
  :align: center

.. GENERATED FROM PYTHON SOURCE LINES 699-716

.. code-block:: default


    solver.tui.display.objects.create(
        "scene",
        "scene-1",
        "graphics-objects",
        "add",
        "mesh-1",
        "transparency",
        "90",
        "quit",
        "add",
        "contour-velocity",
        "quit",
        "quit",
        "quit",
    )








.. GENERATED FROM PYTHON SOURCE LINES 717-720

Close Fluent
~~~~~~~~~~~~
Close Fluent.

.. GENERATED FROM PYTHON SOURCE LINES 720-722

.. code-block:: default


    solver.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 4 minutes  11.574 seconds)


.. _sphx_glr_download_examples_00-fluent_exhaust_system.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: exhaust_system.py <exhaust_system.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: exhaust_system.ipynb <exhaust_system.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
